add_subdirectory(2D_Stochastic)
add_subdirectory(2D_Stochastic_2_Parameters)
add_subdirectory(BodyLoads)
add_subdirectory(Disp_MagInDirection)
add_subdirectory(Disp_SolutionInDirection)
add_subdirectory(Disp_TargetMagnitude)
add_subdirectory(Disp_TargetSolution)
add_subdirectory(Disp_TargetSolutionVector)
add_subdirectory(HeatEq3D)
add_subdirectory(Emech)
add_subdirectory(Tmech)
add_subdirectory(Tmech_PNorm)
add_subdirectory(IS)
add_subdirectory(StabMech )
add_subdirectory(TransMech)
add_subdirectory(TransMechDamped)
add_subdirectory(TransMechTDBCs)
add_subdirectory(TransientTM)
add_subdirectory(MPCs)
add_subdirectory(DfDX_MPCs)
add_subdirectory(CompliantContact)
add_subdirectory(DfDX_CompliantContact)
add_subdirectory(Tmech_Opt_Tet4)
add_subdirectory(Tmech_Opt_Expr_Tet4)
