add_subdirectory(CompMin2D_Variables)
add_subdirectory(CompMin2D_MultiPerf)
add_subdirectory(LBracket3D_Inqlty)
add_subdirectory(LBracket3D_Eqlty)
add_subdirectory(CompMin3D_GPSR)
add_subdirectory(CompMin3D_MMA)
add_subdirectory(HeatEq3D_Norm)
add_subdirectory(ProcessAware_Elastic)
add_subdirectory(Tmech_Opt_Tet4)
add_subdirectory(Tmech_Opt_Expr_Tet4)
add_subdirectory(Tmech_Opt_Tet10)
add_subdirectory(Tmech_Opt_Hex8)
add_subdirectory(Tmech_Opt_Hex27)
add_subdirectory(CompMin2D)
add_subdirectory(CompMin2D_Stochastic_ROL)
add_subdirectory(CompMin2D_Stochastic_ROL_2_Parameters)
add_subdirectory(CompMin3D)
add_subdirectory(CompMin3D_BodyLoads)
add_subdirectory(CompMin3D_MLS)
add_subdirectory(Mitchell2D_MLS_PE)
add_subdirectory(CompMin2D_Variables_MLS)
add_subdirectory(ShapeTopo)
add_subdirectory(CompMin3D_Belos)
add_subdirectory(Mitchell2D_Simp)
add_subdirectory(Mitchell2D_Heaviside)
add_subdirectory(Mitchell2D_MLS)
add_subdirectory(LBracket2D_Heaviside)
add_subdirectory(LBracket2D_MLS)
add_subdirectory(IS_ESP)
add_subdirectory(CSMFit)
